hw7/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prometheus
spec:
  serviceName: prometheus
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      serviceAccount: prometheus
      containers:
      - image: prom/prometheus:v2.19.2
        name: prometheus
        ports:
        - containerPort: 9090
          protocol : TCP
        volumeMounts:
          - name: prometheus-data
            mountPath: /prometheus
          - name: config-volume
            mountPath: /etc/prometheus
      volumes:
        - name: config-volume
          configMap:
            name: prometeus-config
  volumeClaimTemplates:
  - metadata:
      name: prometheus-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: csi-ceph-hdd-ms1
      resources:
        requests:
          storage: 5Gi
