hw7/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  ports:
  - port: 8080
    targetPort: 9090
  selector:
    app: prometheus
  type: ClusterIP
